--- a/less/bootplus/buttons.less
+++ b/less/bootplus/buttons.less
@@ -130,7 +130,9 @@ a.btn-large {
    line-height: 20px;
    .border-radius(@borderRadiusSmall);
 }
-
+a.btn-mini {
+   line-height: 20px;
+}
 
 // Block button
 // -------------------------
